JPMS test execution